# test_qt

./: .gitignore  ReadMe.md  test_qt.sln
gl-vtk/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  shader.cpp  shader.h  vtk_gl.cpp  vtk_gl.h
opengl/: OpenGLWidget.cpp  OpenGLWidget.h  cu_gl.cpp  cu_gl.h  kernel.cu  kernel.h  main.cpp  opengl.vcxproj  opengl.vcxproj.filters
test-vtkShader/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  vtk_gl.cpp  vtk_gl.h
